[feat] Recorder: record opus by default [feat] Recorder: AGC [feat] Recorder: Choose bitrate [fix] Send feedback message not showing on chromium due to data: URL security restrictions [feat] Support GIF images

--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -612,6 +612,10 @@ button[type="submit"]:hover > svg {
   opacity: 0;
   z-index: -1;
 }
+.record p {
+  max-width: 50vw;
+  overflow: auto;
+}
 
 .message-screen {
   display: flex;
